Bug 137295 - FILESAVE: DOCX: Texbox are missing after RT
Summary: FILESAVE: DOCX: Texbox are missing after RT
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-10-06 16:03 UTC by Xisco Faulí
Modified: 2020-10-16 13:31 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (26.00 KB, application/msword)
2020-10-06 16:03 UTC, Xisco Faulí
Details
sample compared MSO LO (90.60 KB, image/png)
2020-10-16 13:30 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-10-06 16:03:53 UTC
Created attachment 166132 [details]
sample file

Steps to reproduce:
1. Open attached document
2. Save it as DOCX
3. Open the new generated filed

-> The document has only 1 textbox

Reproduced in

Version: 7.1.0.0.alpha0+
Build ID: ff5ca4e5fc6a9fb24b0eb6eb629210b024473f67
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2020-10-06 16:05:26 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=c8900890ad39e77285d284f5070abfe3661e493f

author	Caolán McNamara <caolanm@redhat.com>	2020-09-20 15:14:18 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-09-20 17:22:14 +0200
commit c8900890ad39e77285d284f5070abfe3661e493f (patch)
tree 141818af44f8cbfbbcb233ad3b79091d53e162f6
parent 4487a14e7cce62e4fb6c1ebddac5f3e713c061de (diff)
crashtesting: assert on export of ooo123378-1.doc to docx

Bisected with:

Adding Cc: to Caolán McNamara

[Bug found by office-interoperability-tools]
Comment 2 Xisco Faulí 2020-10-06 16:08:56 UTC
attachment 59797 [details] from bug 48546 is also affected by this issue
Comment 3 Commit Notification 2020-10-07 18:25:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ce8a9ce6a1890b28c12ff0826d6808aad0bbccb2

tdf#137295 missing frames on roundtrip through docx

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2020-10-08 14:21:33 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/32af6bcd0c3634f860fc529acb17648e73051c73

tdf#137295: sw_ooxmlexport15: Add unittest

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Timur 2020-10-15 07:36:10 UTC
Texbox is back but border still missing...note for someone who would ask why still open.
Comment 6 Caolán McNamara 2020-10-15 14:13:07 UTC
wrt "Texbox is back but border still missing" ? But is that a preexisting problem unrelated to the original report ? I think that's a different problem that I can bisect to https://cgit.freedesktop.org/libreoffice/core/commit/?id=dd117712bd5692f7bf3870ba91572a0bab54ab86 so I suggest we disentangle this to the original reported problem and if necessary file a new bug for the unrelated problem
Comment 7 Timur 2020-10-16 13:30:42 UTC
Created attachment 166424 [details]
sample compared MSO LO

Thanks. Right, border is some older issue, as seen here.