tdf#137295 missing frames on roundtrip through docx

because they had the same name because GetUniqueDrawObjectName returned the
same name twice because the drawing objects were replaced by flys so there was
no actual drawing objects inserted

Change-Id: Icbe1848b7115c441f8205b8f566ec5ae4b0c55a6